--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 </head>
 <body class="bg-gray-300">
     <main class="grid grid-cols-10 gap-2">
-        <header class="col-span-10 col-start-1 col-end-11 text-blue-600 font-bold bg-white text-center">Un systeme de gestion des taches</header>
-        <section class="flex justify-between gap-10 ml-10"> 
-            <div class="flex flex-col  bg-blue-900 rounded   w-96 p-4">
+        <header class="col-span-10 h-8 text-blue-600 font-bold bg-white text-center">Un systeme de gestion des taches</header>
+        <section class="col-span-10 grid grid-cols-10 gap-2"> 
+            <div class="col-span-2 bg-blue-900 rounded p-4">
                 <h2 class="text-center text-black font-bold">Formulaire</h2>
                 <form action="">
                     <label for="">Titre: </label>
                     <input type="text" class="my-3 h-8 rounded"><br>
                     <label for="">Discription: </label>
                     <input type="text" class="my-3 h-8 rounded"><br>
-                    <label for="">Preoriter</label>
+                    <label for="">Preoriter</label><br>
                     <select name="" id="Preoriter" class="my-3 h-8 rounded">
                         <option value="P0">P0</option>
                         <option value="P1">P1</option>
                         <option value="P2">P2</option>
                     </select><br> 
-                    <label for="">URL:</label>
+                    <label for="">URL:</label><br>
                     <input type="url" name="image" id="imageTache" class="h-8 my-3 rounded"><br>
                     <label for="">Sous Tache</label>
                     <input type="text" class="rounded h-8 my-3"><br>
                     <button>+Ajouter Sous Tache</button>
-                    <button type="submit" class="bg-black rounded h-8 p-1 ml-12 mt-2 text-white">Ajouter Tache</button>
+                    <button type="submit" class="bg-black rounded h-8 p-1 ml-11 mt-2 text-white">Ajouter Tache</button>
                 </form>
             
             </div>
-            <div class="bg-red-600 rounded  font-bold">A faire</div>
-            <div class="bg-blue-600 rounded  font-bold">En cours</div>
-            <div class="bg-green-600 rounded  font-bold"> Terminer</div>
+            <div class="col-span-2 bg-red-600 rounded  font-bold">A faire</div>
+            <div class="col-span-3 bg-blue-600 rounded  font-bold">En cours</div>
+            <div class="col-span-3 bg-green-600 rounded  font-bold"> Terminer</div>
         </section>
     </main>
 </body>
