add: modification sur le style via tailwind

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-300">
     <main class="grid grid-cols-10 gap-2">
-        <header class="col-span-10 h-8 text-blue-600 font-bold bg-white text-center">Un systeme de gestion des taches</header>
+        <header class="col-span-10 h-8   text-blue-600 font-bold bg-white text-center">Un systeme de gestion des taches</header>
         <section class="col-span-10 grid grid-cols-10 gap-2"> 
             <div class="col-span-2 bg-blue-900 rounded p-4">
                 <h2 class="text-center text-black font-bold">Formulaire</h2>
@@ -32,9 +32,15 @@
                 </form>
             
             </div>
-            <div class="col-span-2 bg-red-600 rounded  font-bold">A faire</div>
-            <div class="col-span-3 bg-blue-600 rounded  font-bold">En cours</div>
-            <div class="col-span-3 bg-green-600 rounded  font-bold"> Terminer</div>
+            <div class="col-span-2 bg-red-600 rounded  font-bold p-4">
+                <h2 class="text-center">A faire</h2>
+            </div>
+            <div class="col-span-3 bg-blue-600 rounded  font-bold p-4">
+                <h2 class="text-center">En cours</h2>
+            </div>
+            <div class="col-span-3 bg-green-600 rounded  font-bold p-4">
+             <h2 class="text-center">Terminer</h2>
+            </div>
         </section>
     </main>
 </body>
