--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-300">
     <main class="grid grid-cols-10 gap-2 container mx-auto p-2">
-        <header class="col-span-10 h-12 text-blue-600 font-bold bg-white text-center flex items-center justify-center text-lg"> Un systeme de gestion des taches
+        <header
+            class="col-span-10 h-12 text-blue-600 font-bold bg-white text-center flex items-center justify-between  text-lg">
+            Un systeme de gestion des taches
+            <button onclick="ModelFormAjouteTache()" class="bg-black p-1 font-medium   text-sm text-white rounded-xl mr-1"> Ajouter Tache</button>
         </header>
         <section class="col-span-10 grid grid-cols-10 gap-2 p-2">
-            <div class="col-span-10 md:col-span-2 bg-blue-900 rounded p-4 shadow">
-                <h2 class="text-center text-black font-bold">Formulaire</h2>
+            <div id="ModelFormAjouteTache" class="hidden fixed inset-0 bg-gray-400 bg-opacity-60 flex items-center justify-center z-50">
+                <div  class=" col-span-10 md:col-span-2 bg-blue-900 rounded p-4 shadow">
+                <h2 class="text-center text-black font-bold mb-1">Formulaire <button class="ml-60 text-white" id="masquerModal" onclick="MasquerModal()">X</button></h2>
                 <form id="formTache">
-                    <label class="block text-sm font-medium text-white mb-1" >Titre: </label>
-                    <input type="text" id="titre" class="w-full my-3 h-8 rounded">
+                    <label class="block text-sm font-medium text-white mb-1">Titre: </label>
+                    <input type="text" id="titre" class="w-full my-3 h-8 rounded" required>
                     <label class="block text-sm font-medium text-white mb-1">Discription: </label>
                     <input type="text" id="Discription" class="w-full my-3 h-8 rounded">
                     <label class="block text-sm font-medium text-white mb-1">Priorité</label>
@@ -30,19 +34,27 @@
                         <option value="P2">P2</option>
                     </select><br>
                     <label class="block text-sm font-medium text-white mb-1">URL:</label>
-                    <input type="url" name="image" id="UrlImageTache" class="w-full h-8 my-3 rounded"><br>
+                    <input type="url" name="image" id="UrlImageTache" required class="w-full h-8 my-3 rounded"><br>
 
                     <div id="zoneSoutache">
 
                     </div>
-                    <input type="button" id="AjouterSouTcahe" value="+ Ajouter Sous Tache" class="bg-black w-3/3 mt-4 rounded h-10 text-white hover:bg-purple-600 px-2"/>           
-                    <button type="submit" class="bg-black w-full mt-4 rounded h-10 text-white hover:bg-purple-600">Ajouter Tache</button>
+                    <input type="button" id="AjouterSouTcahe" value="+ Ajouter Sous Tache"
+                        class="bg-black w-3/3 mt-4 rounded h-10 text-white hover:bg-purple-600 px-2" />
+                    <button type="submit"
+                        class="bg-black w-full mt-4 rounded h-10 text-white hover:bg-purple-600">Ajouter Tache</button>
                 </form>
 
             </div>
+            </div>
+            <div class="col-span-10 md:col-span-2 bg-violet-900 rounded  font-bold p-4">
+                <h2 class="text-center">Backlog</h2>
+                <div id="listeAfaire">
+                </div>
+            </div>
             <div class="col-span-10 md:col-span-2 bg-red-600 rounded  font-bold p-4">
                 <h2 class="text-center">A faire</h2>
-                <div id="listeAfaire">
+                <div>
                 </div>
             </div>
             <div class="col-span-10 md:col-span-3 bg-blue-600 rounded  font-bold p-4">
@@ -54,7 +66,7 @@
         </section>
 
     </main>
-    
+
     <script src="main.js"></script>
 </body>
 
