add: faire scrolle  sur le modal hors en ajoute plusieur sous tache

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <section class="col-span-10 grid grid-cols-10 gap-2 p-2">
             <div id="ModelFormAjouteTache" class="hidden fixed inset-0 bg-gray-400 bg-opacity-60 flex items-center justify-center z-50">
-                <div  class=" col-span-10 md:col-span-2 bg-blue-900 rounded p-4 shadow">
+                <div  class="max-h-screen overflow-y-auto col-span-10 md:col-span-2 bg-blue-900 rounded p-4 shadow">
                 <h2 class="text-center text-black font-bold mb-1">Formulaire <button class="ml-60 text-white" id="masquerModal" onclick="MasquerModal()">X</button></h2>
                 <form id="formTache">
                     <label class="block text-sm font-medium text-white mb-1">Titre: </label>
