fix: issues with task management functions
- supprimerTache deletes by index instead of task id
- DeplaceVersTerminer modifies wrong array and has incorrect else syntax
- AfficherTache incorrectly checks ListesTaches.etat
- form submit listener is added multiple times, causing duplicate submissions
- minor CSS class repetition in SousTache labels

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             </div>
             <div class="col-span-10 md:col-span-3 bg-green-600 rounded  font-bold p-4">
                 <h2 class="text-center">Terminer</h2>
+                <div id="listeTerminer">
+                </div>
             </div>
         </section>
 
