--- a/index.html
+++ b/index.html
@@ -4,76 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do</title>
+    <title>Gestion de Tâches</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gray-300">
-    <main class="grid grid-cols-10 gap-2 container mx-auto p-2">
+<body class="bg-gray-100 font-sans">
 
-        <!-- Header -->
-        <header class="col-span-10 h-12 text-blue-600 font-bold bg-white text-center flex items-center justify-between text-lg">
-            Un système de gestion des tâches
-            <button onclick="ouvrirModal()" class="bg-black p-1 font-medium text-sm text-white rounded-xl mr-1">
-                Ajouter Tâche
-            </button>
-        </header>
+    <header class="bg-white shadow-md py-4 px-6 flex justify-between items-center">
+        <h1 class="text-2xl font-bold text-gray-800">💼 Mon Gestionnaire de Tâches</h1>
+        <button onclick="ouvrirModal()"
+            class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg shadow-sm transition">+ Ajouter
+            Tâche</button>
+    </header>
 
-        <!-- Modal Ajout Tâche -->
-        <div id="modalAjoutTache" class="hidden fixed inset-0 bg-gray-400 bg-opacity-60 flex items-center justify-center z-50">
-            <div class="max-h-screen overflow-y-auto col-span-10 md:col-span-2 bg-blue-900 rounded p-4 shadow">
-                <h2 class="text-center text-black font-bold mb-1">
-                    Formulaire
-                    <button class="ml-60 text-white" onclick="fermerModal()">X</button>
-                </h2>
-                <form id="formTache">
-                    <label class="block text-sm font-medium text-white mb-1">Titre:</label>
-                    <input type="text" id="titre" class="w-full my-3 h-8 rounded" required>
+    <!-- Modal Ajout -->
+    <div id="modalAjoutTache"
+        class="hidden fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 p-4">
+        <div class="bg-white rounded-lg shadow-lg w-full max-w-md p-6 relative">
+            <h2 class="text-xl font-bold text-gray-700 mb-4">Nouvelle Tâche
+                <button onclick="fermerModal()" class="absolute top-4 right-4 text-gray-400 hover:text-gray-700">
+                    <i class='bx bx-x text-2xl'></i>
+                </button>
+            </h2>
+            <form id="formTache" class="space-y-3">
+                <input type="text" id="titre" placeholder="Titre" required
+                    class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-400">
+                <input type="text" id="description" placeholder="Description"
+                    class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-400">
+                <select id="priorite"
+                    class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-400">
+                    <option value="P0">P0</option>
+                    <option value="P1">P1</option>
+                    <option value="P2">P2</option>
+                </select>
+                <input type="url" id="urlImageTache" placeholder="URL image" required
+                    class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-400">
 
-                    <label class="block text-sm font-medium text-white mb-1">Description:</label>
-                    <input type="text" id="description" class="w-full my-3 h-8 rounded">
-
-                    <label class="block text-sm font-medium text-white mb-1">Priorité:</label>
-                    <select id="priorite" class="w-full my-3 h-8 rounded">
-                        <option value="P0">P0</option>
-                        <option value="P1">P1</option>
-                        <option value="P2">P2</option>
-                    </select>
-
-                    <label class="block text-sm font-medium text-white mb-1">URL Image:</label>
-                    <input type="url" id="urlImageTache" class="w-full h-8 my-3 rounded" required>
-
-                    <div id="zoneSousTache"></div>
-
-                    <input type="button" id="ajouterSousTache" value="+ Ajouter Sous-Tâche" class="bg-black w-full mt-4 rounded h-10 text-white hover:bg-purple-600 px-2" />
-                    <button type="submit" class="bg-black w-full mt-4 rounded h-10 text-white hover:bg-purple-600">
-                        Ajouter Tâche
-                    </button>
-                </form>
-            </div>
+                <div id="zoneSousTache"></div>
+                <button id="ajouterSousTache"
+                    class="w-full bg-gray-200 hover:bg-gray-300 text-gray-800 py-2 rounded-md transition">+ Ajouter
+                    Sous-Tâche</button>
+                <button type="submit"
+                    class="w-full bg-indigo-600 hover:bg-indigo-500 text-white py-2 rounded-md transition">Ajouter
+                    Tâche</button>
+            </form>
         </div>
+    </div>
 
-        <!-- Sections -->
-        <section class="col-span-10 grid grid-cols-10 gap-2 p-2">
-            <div class="col-span-10 md:col-span-2 bg-violet-900 rounded font-bold p-4">
-                <h2 class="text-center">Backlog</h2>
-                <div id="listeAfaire"></div>
-            </div>
-            <div class="col-span-10 md:col-span-2 bg-red-600 rounded font-bold p-4">
-                <h2 class="text-center">A faire</h2>
-                <div id="listeAfaires"></div>
-            </div>
-            <div class="col-span-10 md:col-span-3 bg-blue-600 rounded font-bold p-4">
-                <h2 class="text-center">En cours</h2>
-                <div id="listeEncours"></div>
-            </div>
-            <div class="col-span-10 md:col-span-3 bg-green-600 rounded font-bold p-4">
-                <h2 class="text-center">Terminé</h2>
-                <div id="listeTerminer"></div>
-            </div>
-        </section>
-
+    <!-- Kanban Columns -->
+    <main class="grid grid-cols-1 md:grid-cols-4 gap-4 p-6">
+        <div class="bg-gradient-to-b from-purple-100 to-purple-50 rounded-lg p-4 shadow">
+            <h2 class="font-bold text-lg mb-2 text-purple-700 text-center">Backlog</h2>
+            <div id="listeAfaire" class="space-y-2"></div>
+        </div>
+        <div class="bg-gradient-to-b from-red-100 to-red-50 rounded-lg p-4 shadow">
+            <h2 class="font-bold text-lg mb-2 text-red-700 text-center">A Faire</h2>
+            <div id="listeAfaires" class="space-y-2"></div>
+        </div>
+        <div class="bg-gradient-to-b from-blue-100 to-blue-50 rounded-lg p-4 shadow">
+            <h2 class="font-bold text-lg mb-2 text-blue-700 text-center">En Cours</h2>
+            <div id="listeEncours" class="space-y-2"></div>
+        </div>
+        <div class="bg-gradient-to-b from-green-100 to-green-50 rounded-lg p-4 shadow">
+            <h2 class="font-bold text-lg mb-2 text-green-700 text-center">Terminé</h2>
+            <div id="listeTerminer" class="space-y-2"></div>
+        </div>
     </main>
 
     <script src="main.js"></script>
