--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-100 font-sans">
 
     <header class="bg-white shadow-md py-4 px-6 flex justify-between items-center">
-        <h1 class="text-2xl font-bold text-gray-800">💼 Mon Gestionnaire de Tâches</h1>
+        <h1 class="text-2xl font-bold text-gray-800">Mon Gestionnaire de Tâches</h1>
         <button onclick="ouvrirModal()"
             class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-lg shadow-sm transition">+ Ajouter
             Tâche</button>
